<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="app.maldonadopato91.com.tarea3petagrammenuyfragment.Contacto">

<include android:id="@+id/miActionBar"
    layout="@layout/action_bar"
    >

</include>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tilNombreConta"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_below="@id/miActionBar"
    >
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:id="@+id/etNombreContacto"
        android:inputType="textCapWords"/>
</android.support.design.widget.TextInputLayout>

<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tilEmailConta"
    android:layout_below="@id/tilNombreConta"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    >

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmailContacto"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:ems="10"/>

</android.support.design.widget.TextInputLayout>



<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/tilPasswdConta"
    android:layout_below="@id/tilEmailConta"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    >

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPasswdContacto"
        android:hint="@string/passwd"
        android:password="true"
        android:inputType="textPassword"/>

</android.support.design.widget.TextInputLayout>



<android.support.design.widget.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/tilPasswdConta"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    >

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etComentario"
        android:hint="@string/comentario"/>

</android.support.design.widget.TextInputLayout>

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btn_enviar"
    android:id="@+id/btnEnviarComentario"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:theme="@style/miBotonRaised"
    android:layout_weight="0.5"
    android:layout_marginRight="-5dp"
    android:layout_marginLeft="-5dp"
    android:layout_marginBottom="-6dp"
    />

</RelativeLayout>